      an authentication challenge. 

    * Fix NULL qualifiers to have a (required) type. (Martin Mrazik)

    * Fix initialising CIMInstanceName keys from a NocaseDict. (Bart
      Whiteley) 

    * Return correct namespace in path for return value from
      GetInstance. (Tim Potter)

    * Numerous bugfixes to Twisted Python client. (Tim Potter)

  ENHANCEMENTS:

    * Support for OpenWBEM password-less local authentication. 
      (Bart Whiteley)

    * Support for embedded objects is described in DSP0201-2.2.0
      (Bart Whiteley)

    * New CIMDateTime class to deal with CIM-isms of datetimes.
      Most notably, datetime deals with timezone info poorly.
      (Bart Whiteley)

    * Add InvokeMethod() support in Twisted Python client. (Tim
      Potter)

pywbem-0.5  2006-11-21

  API CHANGES:

    * Many API changes were made to simplify the function and object
      interface of PyWBEM.  Aspects of just about every CIM operation
      call and CIM object have changed.  The major changes are:

      - The "LocalNamespacePath" keyword argument has been renamed to
        simply "namespace" for all CIM operations.

      - Replaced all object location classes with CIMInstanceName, and
        all instance classes with CIMInstance.  CIMInstanceName now
        has "host" and "namespace" attributes to fully name a
        reference to an instance.  The CIMInstance class now has a
        "path" attribute which is of type CIMInstanceName.  

      - EnumerateInstances() now returns a list of CIMInstance objects
        (with path attribute set) instead of a list of
        CIMNamedInstance or tuples of (CIMInstanceName, CIMInstance).
 
      - All representations of properties can now be represented with
        the CIMProperty class.

    * All classes now have a copy() method which return a deep copy of
      the object.  PyWBEM makes extensive use of dictionary objects
      which are passed by reference in Python.  Use the copy() method